src/tests/ui/err-01.stderr
error[E0277]: `?` couldn't convert the error to `Kaboom`
  --> tests/ui/err-01.rs:41:12
   |
40 | fn iffy() -> Result<(), Kaboom> {
   |              ------------------ expected `Kaboom` because of this
41 |     Err(Fatal)?
   |     ----------^ the trait `From<Fatal>` is not implemented for `Kaboom`
   |     |
   |     this can't be annotated with `?` because it has type `Result<_, Fatal>`
   |
note: `Kaboom` needs to implement `From<Fatal>`
  --> tests/ui/err-01.rs:30:1
   |
30 | enum Kaboom {
   | ^^^^^^^^^^^
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
help: the trait `From<Fatal>` is not implemented for `Kaboom`
      but trait `From<Bobo>` is implemented for it
  --> tests/ui/err-01.rs:37:9
   |
37 |     Bobo(#[from] Bobo),
   |            ^^^^
   = help: for that trait implementation, expected `Bobo`, found `Fatal`
